Cpp/.metadata/.plugins/org.eclipse.cdt.ui/Test_iptimes_gen_alg.build.log
00:30:18 **** Build of configuration Debug for project Test_iptimes_gen_alg ****
make all 
Building file: ../src/StochasticModelFit.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/StochasticModelFit.d" -MT"src/StochasticModelFit.d" -o "src/StochasticModelFit.o" "../src/StochasticModelFit.cpp"
In file included from /usr/include/c++/5/random:35:0,
                 from ../src/StochasticModelFit.h:17,
                 from ../src/StochasticModelFit.cpp:8:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
In file included from ../src/StochasticModelFit.cpp:8:0:
../src/StochasticModelFit.h:598:2: warning: identifier ‘noexcept’ is a keyword in C++11 [-Wc++0x-compat]
  StochasticModelFit& operator=(const StochasticModelFit& other) noexcept
  ^
../src/StochasticModelFit.h:598:63: error: expected ‘;’ at end of member declaration
  StochasticModelFit& operator=(const StochasticModelFit& other) noexcept
                                                               ^
../src/StochasticModelFit.h:598:65: error: ‘noexcept’ does not name a type
  StochasticModelFit& operator=(const StochasticModelFit& other) noexcept
                                                                 ^
../src/StochasticModelFit.h:598:65: note: C++11 ‘noexcept’ only available with -std=c++11 or -std=gnu++11
../src/StochasticModelFit.h:737:37: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  information_criterion m_infoCrit = AIC;
                                     ^
../src/StochasticModelFit.h: In member function ‘double StochasticModelFit::getRandom()’:
../src/StochasticModelFit.h:637:10: error: ‘std::chrono’ has not been declared
     std::chrono::system_clock::now().time_since_epoch().count();
          ^
../src/StochasticModelFit.h: In member function ‘double StochasticModelFit::getRandom(unsigned int)’:
../src/StochasticModelFit.h:653:3: error: ‘ranlux48’ is not a member of ‘std’
   std::ranlux48 generator(seed);
   ^
../src/StochasticModelFit.h:657:4: error: ‘weibull_distribution’ is not a member of ‘std’
    std::weibull_distribution<double> distribution(m_param1, m_param2);
    ^
../src/StochasticModelFit.h:657:30: error: expected primary-expression before ‘double’
    std::weibull_distribution<double> distribution(m_param1, m_param2);
                              ^
../src/StochasticModelFit.h:658:26: error: ‘generator’ was not declared in this scope
    retVal = distribution(generator);
                          ^
../src/StochasticModelFit.h:658:35: error: ‘distribution’ was not declared in this scope
    retVal = distribution(generator);
                                   ^
../src/StochasticModelFit.h:663:4: error: ‘normal_distribution’ is not a member of ‘std’
    std::normal_distribution<double> distribution(m_param1, m_param2);
    ^
../src/StochasticModelFit.h:663:29: error: expected primary-expression before ‘double’
    std::normal_distribution<double> distribution(m_param1, m_param2);
                             ^
../src/StochasticModelFit.h:664:26: error: ‘generator’ was not declared in this scope
    retVal = distribution(generator);
                          ^
../src/StochasticModelFit.h:664:35: error: ‘distribution’ was not declared in this scope
    retVal = distribution(generator);
                                   ^
../src/StochasticModelFit.h:670:4: error: ‘exponential_distribution’ is not a member of ‘std’
    std::exponential_distribution<double> distribution(m_param1);
    ^
../src/StochasticModelFit.h:670:34: error: expected primary-expression before ‘double’
    std::exponential_distribution<double> distribution(m_param1);
                                  ^
../src/StochasticModelFit.h:671:26: error: ‘generator’ was not declared in this scope
    retVal = distribution(generator);
                          ^
../src/StochasticModelFit.h:671:35: error: ‘distribution’ was not declared in this scope
    retVal = distribution(generator);
                                   ^
../src/StochasticModelFit.h:685:4: error: ‘exponential_distribution’ is not a member of ‘std’
    std::exponential_distribution<double> distribution(m_param1);
    ^
../src/StochasticModelFit.h:685:34: error: expected primary-expression before ‘double’
    std::exponential_distribution<double> distribution(m_param1);
                                  ^
../src/StochasticModelFit.h:686:41: error: ‘generator’ was not declared in this scope
    retVal = m_param2 * exp(distribution(generator));
                                         ^
../src/StochasticModelFit.h:686:50: error: ‘distribution’ was not declared in this scope
    retVal = m_param2 * exp(distribution(generator));
                                                  ^
../src/StochasticModelFit.h:693:4: error: ‘cauchy_distribution’ is not a member of ‘std’
    std::cauchy_distribution<double> distribution(m_param2, m_param1);
    ^
../src/StochasticModelFit.h:693:29: error: expected primary-expression before ‘double’
    std::cauchy_distribution<double> distribution(m_param2, m_param1);
                             ^
../src/StochasticModelFit.h:694:26: error: ‘generator’ was not declared in this scope
    retVal = distribution(generator);
                          ^
../src/StochasticModelFit.h:694:35: error: ‘distribution’ was not declared in this scope
    retVal = distribution(generator);
                                   ^
make: *** [src/StochasticModelFit.o] Error 1
src/subdir.mk:24: recipe for target 'src/StochasticModelFit.o' failed

00:30:21 Build Finished (took 2s.574ms)

